Authorization Clear cash data All controller

--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SpicyX | Home</title>
+    <title>king food | Home</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/x-icon">
@@ -83,7 +83,9 @@
                     </button>
                     <!-- LOGO -->
                     <!--  Image based logo  -->
-                    <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="Logo img"></a>
+                    @*<a class="navbar-brand" href="#"><img src="~/assets/img/logo.png" alt="Logo img"></a>*@
+                    <a class="navbar-brand" href="#"><img src="~/image/Logo.png" alt="Logo img"></a>
+                    
                     <!--  Text based logo  -->
                     <!--           <a class="navbar-brand" href="index.html"><span>SpicyX</span></a>   -->
                 </div>
