--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -135,7 +135,8 @@
                     <!-- LOGO -->
                     <!--  Image based logo  -->
                     @*<a class="navbar-brand" href="index.html"></a>*@
-                    <img src="~/assets/img/logo.png" alt="Logo img">
+                    @*<img src="~/assets/img/logo.png" alt="Logo img">*@
+                    <a class="navbar-brand" href="#"><img src="~/image/Logo.png" alt="Logo img"></a>
                     <!--  Text based logo  -->
                     <!--           <a class="navbar-brand" href="index.html"><span>SpicyX</span></a>   -->
                 </div>
