--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -234,13 +234,13 @@
                                 <input type="hidden" name="InvoiceID" id="InvoiceID" />
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="BookingDate" id="datepicker" placeholder="Date">
+                                        <input type="text" class="form-control" name="BookingDate" id="datepicker" placeholder="Date" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @*<input type="text" class="form-control" placeholder="Reservation Type" name="ReservationTypeID">*@
-                                        <select class="form-control" id="ReservationTypeID" name="ReservationTypeID">
+                                        <select class="form-control" id="ReservationTypeID" name="ReservationTypeID" required>
                                             <option value="0">--Select User--</option>
                                             <option value="1">User-1</option>
                                             <option value="2">User-2</option>
@@ -253,17 +253,17 @@
                                
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="StartTime" name="StartTime" id="StartTime" readonly="readonly">
+                                        <input type="text" class="form-control" placeholder="StartTime" name="StartTime" id="StartTime" readonly="readonly" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="EndTime" name="EndTime" id="EndTime" readonly="readonly">
+                                        <input type="text" class="form-control" placeholder="EndTime" name="EndTime" id="EndTime" readonly="readonly" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Booking Qty" name="BookingQty" id="BookingQty">
+                                        <input type="text" class="form-control" placeholder="Booking Qty" name="BookingQty" id="BookingQty" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -643,11 +643,11 @@
                                         @*<form class="mu-contact-form" id="fContact">*@
                                         <div class="form-group mu-contact-form">
                                             <label for="name">Your Name</label>
-                                            <input type="text" class="form-control" id="Name" name="Name" placeholder="Name">
+                                            <input type="text" class="form-control" id="Name" name="Name" placeholder="Name" required>
                                         </div>
                                         <div class="form-group mu-contact-form">
                                             <label for="email">Email address</label>
-                                            <input type="email" class="form-control" id="EmailId" name="EmailId" placeholder="Email">
+                                            <input type="email" class="form-control" id="EmailId" name="EmailId" placeholder="Email" required>
                                         </div>
                                         <div class="form-group mu-contact-form">
                                             <label for="email">Phone</label>
@@ -656,7 +656,7 @@
 
                                         <div class="form-group mu-contact-form">
                                             <label for="subject">Subject</label>
-                                            <input type="text" class="form-control" id="Subject" name="Subject" placeholder="Subject">
+                                            <input type="text" class="form-control" id="Subject" name="Subject" placeholder="Subject" required>
                                         </div>
                                         <div class="form-group mu-contact-form">
                                             <label for="message">Message</label>
