--- a/TG.RMSCLIENT.WEB/Views/DashBoard/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/DashBoard/Index.cshtml
@@ -62,55 +62,69 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="mu-reservation-area">
-                    <div class="mu-title">
+                    @*<div class="mu-title">
                         <span class="mu-subtitle">View</span>
                         <h2 style="color:black">Booking List</h2>
                         <i class="fa fa-spoon"></i>
                         <span class="mu-title-bar"></span>
-                    </div>
+                    </div>*@
                     <div class="mu-reservation-content">
-                        <form class="mu-reservation-form">
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <select class="form-control" id="ReservationType" name="ReservationType">
-                                            <option value="0">--Select Category--</option>
-                                            <option value="1">Break Fast</option>
-                                            <option value="2">Launch</option>
-                                            <option value="3">Dinner</option>                                            
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">                                        
-                                        <input type="text" class="form-control" placeholder="Booking Date" name="BookingDate" id="datepicker">
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <select class="form-control" id="ReservationStatus" name="ReservationStatus">
-                                            <option value="0">--Select Status--</option>
-                                            <option value="1">Open</option>
-                                            <option value="2">Close</option>
-                                            <option value="3">Cancealed</option>
-                                        </select>
-                                    </div>                                    
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <button type="button" class="mu-readmore-btn" id="search">Search</button>
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                            <div class="row" style="padding-left:0%">                                
-                                <table id="JQBookingList"></table>
-                                <div id="JQBookingpager"></div>
-                            </div>
-                            
-                        </form>
+                        <div class="row">
+                            <h3 style="color:black">Booking Summary from Today's to advance</h3>
+                        </div>
+                        <div class="row" style="margin-top:2%;">
+                            <table id="JQBookingSummary"></table>
+                            <div id="JQBookingSummarypager"></div>
+                        </div>
                     </div>
-                </div>
+
+                        <div class="mu-reservation-content" style="margin-top:2%;border-top:solid thin black">
+                            <div class="row">
+                                <h3 style="color:black">Booking Details from Today's to advance</h3>
+                            </div>
+                            <form class="mu-reservation-form">
+                                
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <select class="form-control" id="ReservationType" name="ReservationType">
+                                                <option value="0">--Select Category--</option>
+                                                <option value="1">Break Fast</option>
+                                                <option value="2">Launch</option>
+                                                <option value="3">Dinner</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Booking Date" name="BookingDate" id="datepicker">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <select class="form-control" id="ReservationStatus" name="ReservationStatus">
+                                                <option value="0">--Select Status--</option>
+                                                <option value="1">Open</option>
+                                                <option value="2">Close</option>
+                                                <option value="3">Cancealed</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <button type="button" class="mu-readmore-btn" id="search">Search</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="row" style="padding-left:0%">
+                                    <table id="JQBookingList"></table>
+                                    <div id="JQBookingpager"></div>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
