--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -95,9 +95,9 @@
                         @*<li><a href="/Home/Index#mu-slider">HOME</a></li>*@
                         <li><a href="#mu-about-us">ABOUT US</a></li>
                         <li><a href="#mu-restaurant-menu">MENU</a></li>
+                        <li><a href="#mu-chef">OUR BAR</a></li>
                         <li><a href="#mu-reservation">RESERVATION</a></li>
-                        <li><a href="#mu-gallery">GALLERY</a></li>
-                        <li><a href="#mu-chef">OUR TEAM</a></li>
+                        <li><a href="#mu-gallery">GALLERY</a></li>                        
                         <li><a href="#mu-latest-news">BLOG</a></li>
                         <li><a href="#mu-contact">CONTACT</a></li>                        
                         @*<li class="dropdown">
