--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -91,25 +91,32 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
-                        <li><a href="#mu-slider">HOME</a></li>
+                        <li><a href="#mu-slider">@TRI_RMS.Language.HOME</a></li>
                         @*<li><a href="/Home/Index#mu-slider">HOME</a></li>*@
-                        <li><a href="#mu-about-us">ABOUT US</a></li>
-                        <li><a href="#mu-restaurant-menu">MENU</a></li>
-                        <li><a href="#mu-chef">OUR BAR</a></li>
-                        <li><a href="#mu-reservation">RESERVATION</a></li>
-                        <li><a href="#mu-gallery">GALLERY</a></li>                        
-                        <li><a href="#mu-latest-news">BLOG</a></li>
-                        <li><a href="#mu-contact">CONTACT</a></li>                        
-                        @*<li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">PAGE <span class="caret"></span></a>
+                        <li><a href="#mu-about-us">@TRI_RMS.Language.ABOUT_US</a></li>
+                        <li><a href="#mu-restaurant-menu">@TRI_RMS.Language.MENU</a></li>
+                        <li><a href="#mu-chef">@TRI_RMS.Language.OUR_BAR</a></li>
+                        <li><a href="#mu-reservation">@TRI_RMS.Language.Reservation.ToUpper()</a></li>
+                        <li><a href="#mu-gallery">@TRI_RMS.Language.GALLERY</a></li>
+                        <li><a href="#mu-latest-news">@TRI_RMS.Language.BLOG</a></li>
+                        <li><a href="#mu-contact">@TRI_RMS.Language.CONTACT</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">@TRI_RMS.Language.LANGUAGE <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="blog-archive.html">BLOG</a></li>
-                                <li><a href="blog-single.html">BLOG DETAILS</a></li>
-                                <li><a href="404.html">404 PAGE</a></li>
-                            </ul>
-                        </li>*@
-                    </ul>
-                </div><!--/.nav-collapse -->
+                                <li>
+                                    @Html.ActionLink("English", "ChangeLanguage",
+                                         "Home", new { SelectedLanguage = "en" }, null)
+                                </li>
+
+
+                                <li>
+                                    @Html.ActionLink("Italian", "ChangeLanguage",
+                                         "Home", new { SelectedLanguage = "it" }, null)
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!--/.nav-collapse -->
             </div>
         </nav>
     </header>
