--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
 <!-- End header section -->
 <!-- Start slider  -->
 <section id="mu-slider">
+    @*<marquee loop=2 behavior=SLIDE>Hello</marquee>*@
     <div class="mu-slider-area">
         <!-- Top slider -->
         <div class="mu-top-slider">
@@ -25,8 +26,10 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    
+                    @*<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
@@ -36,10 +39,13 @@
                 <img src="assets/img/slider/2.jpg" alt="img">
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
-                    <span class="mu-slider-small-title">@TRI_RMS.Language.Our_Reception</span>
+                    <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
+                    <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    @*<span class="mu-slider-small-title">@TRI_RMS.Language.Our_Reception</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.GREEN_FOODS</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
@@ -49,10 +55,13 @@
                 <img src="assets/img/slider/3.jpg" alt="img">
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
-                    <span class="mu-slider-small-title">@TRI_RMS.Language.Delicious</span>
+                    <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
+                    <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    @*<span class="mu-slider-small-title">@TRI_RMS.Language.Delicious</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.SPICY_MASALAS</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
@@ -61,10 +70,13 @@
                 <img src="assets/img/slider/4.jpg" alt="img">
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
-                    <span class="mu-slider-small-title">@TRI_RMS.Language.Delicious</span>
+                    <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
+                    <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    @*<span class="mu-slider-small-title">@TRI_RMS.Language.Delicious</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.SPICY_MASALAS</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
@@ -72,9 +84,12 @@
                 <img src="assets/img/slider/6.jpg" alt="img">
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
-                    <span class="mu-slider-small-title">@TRI_RMS.Language.BBQ</span>
+                    <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
+                    <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    @*<span class="mu-slider-small-title">@TRI_RMS.Language.BBQ</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.BBQ</h2>
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
@@ -82,15 +97,18 @@
                 <img src="assets/img/slider/7.jpg" alt="img">
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
-                    <span class="mu-slider-small-title">@TRI_RMS.Language.BBQ</span>
+                    <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
+                    <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    @*<span class="mu-slider-small-title">@TRI_RMS.Language.BBQ</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.BBQ</h2>
-                    @*<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>*@
-                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>
+                    <a href="#" class="mu-readmore-btn">@TRI_RMS.Language.READ_MORE</a>*@
                 </div>
                 <!-- / Top slider content -->
             </div>
         </div>
     </div>
+    
 </section>
 <!-- End slider  -->
 <!-- Start About us -->
@@ -140,12 +158,12 @@
 <!-- End About us -->
 <!-- Start Counter Section -->
 <section id="mu-counter">
-    <div class="mu-counter-overlay">
+    <div class="mu-counter-overlay" style="padding:0">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="mu-counter-area">
-                        <ul class="mu-counter-nav">
+                        @*<ul class="mu-counter-nav">
                             <li class="col-md-3 col-sm-3 col-xs-12">
                                 <div class="mu-single-counter">
                                     <span>@TRI_RMS.Language.Fresh</span>
@@ -174,7 +192,17 @@
                                     <p>@TRI_RMS.Language.Customers</p>
                                 </div>
                             </li>
-                        </ul>
+                        </ul>*@
+                        <marquee behavior="scroll" direction="left">
+                            <img src="~/assets/img/about-us/abtus-img-1.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-2.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-6.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-4.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-5.png" width="120" height="80" alt="Natural" />
+                        </marquee>
+                        
+                        <!-- Marquee Side Touch Margin Bounce Text by Way2Tutorial.com -->
+
                     </div>
                 </div>
             </div>
@@ -208,6 +236,29 @@
     </div>
 </section>
 <!-- End Restaurant Menu -->
+
+<!--Marque Start -->
+<section id="mu-counter">
+    <div class="mu-counter-overlay" style="padding:0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="mu-counter-area">                    
+                        <marquee behavior="scroll" direction="left">
+                            <img src="~/assets/img/about-us/abtus-img-1.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-2.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-6.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-4.png" width="120" height="80" alt="Natural" />
+                            <img src="~/assets/img/about-us/abtus-img-5.png" width="120" height="80" alt="Natural" />
+                        </marquee>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Marque End-->
+
 <script src="~/JavascriptFile/PageScript/BarSection.js"></script>
 <!--Bar-->
 <section id="mu-chef">
@@ -345,7 +396,7 @@
 </section>
 <!-- End Gallery -->
 <!-- Start Client Testimonial section -->
-<section id="mu-client-testimonial">
+@*<section id="mu-client-testimonial">
     <div class="mu-overlay">
         <div class="container">
             <div class="row">
@@ -398,10 +449,10 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!-- End Client Testimonial section -->
 <!-- Start Subscription section -->
-<section id="mu-subscription">
+@*<section id="mu-subscription">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -420,7 +471,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!-- End Subscription section -->
 <!-- Start Chef Section -->
 @*<section id="mu-chef">
@@ -581,7 +632,7 @@
     </section>*@
 <!-- End Chef Section -->
 <!-- Start Latest News -->
-<section id="mu-latest-news">
+@*<section id="mu-latest-news">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -641,7 +692,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!-- End Latest News -->
 <!-- Start Contact section -->
 <section id="mu-contact" style="z-index:900">
