--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>king food | Home</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/x-icon">
+   @* <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/k-icon">*@
 
     <!-- Font awesome -->
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
@@ -98,7 +98,7 @@
                         <li><a href="#mu-chef">@TRI_RMS.Language.OUR_BAR</a></li>
                         <li><a href="#mu-reservation">@TRI_RMS.Language.Reservation.ToUpper()</a></li>
                         <li><a href="#mu-gallery">@TRI_RMS.Language.GALLERY</a></li>
-                        <li><a href="#mu-latest-news">@TRI_RMS.Language.BLOG</a></li>
+                        @*<li><a href="#mu-latest-news">@TRI_RMS.Language.BLOG</a></li>*@
                         <li><a href="#mu-contact">@TRI_RMS.Language.CONTACT</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">@TRI_RMS.Language.LANGUAGE <span class="caret"></span></a>
