chage about us List

--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -114,14 +114,14 @@
                             <div class="mu-about-us-left">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid, itaque illum assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus, libero enim odio quo. Explicabo ex sapiente sit eligendi, facere voluptatum! Quia vero rerum sunt porro architecto corrupti eaque corporis eum, enim soluta, perferendis dignissimos, repellendus, beatae laboriosam.</p>
                                 <ul>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
+                                    <li>We treat you like a person who will exchange money for goods.</li>
+                                    <li>Come hungry, leave regretful, but still a little high.</li>
+                                    <li>We have the ingredients with which we can make you a pizza.</li>
+                                    <li>Yours Truly Restaurant. For AM & PM people.</li>
+                                    <li>Buy a bucket of chicken and have a barrel of fun.</li>
+                                    <li>It's a good time for the great taste of Kingfood's.</li>
                                 </ul>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique molestias est quod reprehenderit, quibusdam nam qui, quam magnam. Ex.</p>
+                                <p>When you're here, you're with your family with whom you have little in common, which is why you came to the Kingfood. Here's a beeper.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
