Date Picker hide after selecting a date

--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -257,7 +257,7 @@
 
                         <script src="~/JavascriptFile/PageScript/Booking.js"></script>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quidem autem iusto, perspiciatis, amet, quaerat blanditiis ducimus eius recusandae nisi aut totam alias consectetur et.</p>
+                        <p>When you're here, you're with your family with whom you have little in common, which is why you came to the Kingfood. Here's a beeper.</p>
                         <form class="mu-reservation-form" id="formR">
                             <div class="row">
                                 <input type="hidden" name="BookingID" id="BookingID" />
