--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -408,7 +408,7 @@
                                                 height: 20px;
                                                 /*background-color: red;*/
                                                 padding: 25px;
-                                                background-image: url(/assets/img/menu/Star-blank.jpg);
+                                                background-image: url(/assets/img/menu/Star-blank.png);
                                                 background-repeat: no-repeat;
                                             }
 
