--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
         @RenderBody()        
     </div>    
      
-    <div id="fade2" style="width:100%;z-index:900;opacity:.9;background-color:black;margin-top:0%;position:fixed;top:0" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+    <div id="fade2" style="width:100%;z-index:900;opacity:.9;background-color:black;margin-top:0%;position:fixed;top:0;display:none" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
         <div id="" style="height:50%;height:50%;margin-left:.5%;margin-top:10%;background-color:white;z-index:1000;opacity:100">
             <div id="btn" style="width:100%" class="col-lg-12 col-md-12">
                 <button type="button" class="btn btn-warning btn-circle btn-lg" id="ac" style="float:right;"><i class="glyphicon glyphicon-remove"></i></button>
