--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                     
                    
                 </div>
@@ -40,7 +40,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                    
                 </div>
                 <!-- / Top slider content -->
@@ -53,7 +53,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                    
                 </div>
                 <!-- / Top slider content -->
@@ -65,7 +65,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                    
                 </div>
                 <!-- / Top slider content -->
@@ -76,7 +76,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                     
                 </div>
                 <!-- / Top slider content -->
@@ -87,7 +87,7 @@
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">@TRI_RMS.Language.Welcome</span>
                     <h2 class="mu-slider-title">@TRI_RMS.Language.TO_THE_KING_FOOD</h2>
-                    <marquee behavior="scroll" direction="left"><p style="color:wheat">atiqueatiqueatiqueatique</p></marquee>
+                    <marquee behavior="scroll" direction="left"><p style="color:wheat">We treat you like a person who will exchange money for goods.</p></marquee>
                     
                 </div>
                 <!-- / Top slider content -->
