--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutLogin.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutLogin.cshtml
@@ -7,7 +7,8 @@
     <title>King Food | Home</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/image/favicon.ico" type="image/x-icon">
+    
 
     <!-- Font awesome -->
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
@@ -51,7 +52,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
-                        <li><a href="http://rmsweb.devscraft.com/">HOME</a></li>
+                        <li><a href="http://rmsdemo.devscraft.com/">HOME</a></li>
                         @*<li><a href="/Home/Index#mu-slider">HOME</a></li>*@
                         @*<li><a href="#mu-about-us">ABOUT US</a></li>
                         <li><a href="#mu-restaurant-menu">MENU</a></li>
