--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>king food | Home</title>
 
     <!-- Favicon -->
-   @* <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/k-icon">*@
+    <link rel="shortcut icon" href="~/image/favicon.ico" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
@@ -113,6 +113,7 @@
                     <!--  Image based logo  -->
                     @*<a class="navbar-brand" href="#"><img src="~/assets/img/logo.png" alt="Logo img"></a>*@
                     <a class="navbar-brand" href="#"><img src="~/image/Logo.png" alt="Logo img"></a>
+
                     
                     <!--  Text based logo  -->
                     <!--           <a class="navbar-brand" href="index.html"><span>SpicyX</span></a>   -->
