--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -7,7 +7,7 @@
     <title>SpicyX | Home</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="~/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/image/favicon.ico" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
