--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutLogin.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutLogin.cshtml
@@ -107,14 +107,24 @@
         @RenderBody()        
     </div>    
     
-    <div id="fade2" style="width:100%;z-index:900;opacity:.9;background-color:black;margin-top:0%;position:fixed;top:0;display:none" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
-        <div id="" style="height:50%;height:50%;margin-left:0%;margin-top:10%;background-color:white;z-index:1000;opacity:100">
-            <div id="btn" style="width:100%" class="col-lg-12 col-md-12">
+    <div id="fade2" style="width: 100%; z-index: 900; opacity: .9; background-color: black; margin-top: 0%; margin-top: 70px; position: fixed; top: 0; display: none" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+        <div id="" style="height:100%;height:80%;margin-left:0%;background-color:white;z-index:1000;opacity:80">
+            <div id="btn" style="width:100%;padding-top:10px;" class="col-lg-12 col-md-12">
                 <button type="button" class="btn btn-warning btn-circle btn-lg" id="ac" style="float:right;"><i class="glyphicon glyphicon-remove"></i></button>
             </div>
 
             <div id="details" style="width:100%" class="col-lg-12 col-md-12">
-                <p>Hello King Food Mini</p>
+                <div id="si" class="col-lg-12 col-md-12" >
+                    @*<div class="col-lg-6 col-md-6">
+                        <img class="media-object" src="/MenuIMG/abtus-img-1.png" alt="img">
+                    </div>
+
+                    <div id="si" class="col-lg-6 col-md-6">
+                        <h4> sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf
+                             sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf sjkdlfhjkldsafhldksfhkdslf</h4>
+                    </div>*@
+                </div>
+                
             </div>
         </div>
 
